--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <title>Bitflix</title>
     <!-- Meta tags -->
     <meta charset="UTF-8">
-    <meta name="description" content="Free Web tutorials">
-    <meta name="keywords" content="Watch movies instantly in HD for free. Directly in your browser.">
+    <meta name="description" content="Watch movies instantly in HD for free. Directly in your browser.">
+    <meta name="keywords" content="movies,hd,streaming,torrent,free">
     <meta name="author" content="Nuzze">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
